# delta_ex

./: .credo.exs  .gitignore  DEVELOPMENT.md  LICENSE  README.md  docker-compose.yml  mise.toml  mix.exs  renovate.json
.github/workflows/: ci.yml
lib/: delta_ex.ex
lib/delta_ex/: arrow.ex  cdf.ex  config.ex  deletion_vectors.ex  features.ex  maintenance.ex  merge.ex  metadata.ex  native.ex  operations.ex  query.ex  reader.ex  telemetry.ex  transactions.ex  util.ex  writer.ex
native/delta_ex_native/: Cargo.toml
native/delta_ex_native/src/: arrow.rs  cdf.rs  deletion_vectors.rs  error.rs  expressions.rs  features.rs  filesystem.rs  lib.rs  maintenance.rs  merge.rs  metadata.rs  operations.rs  query.rs  reader.rs  resource.rs  runtime.rs  schema.rs  transactions.rs  writer.rs
test/: test_helper.exs
test/delta_ex/: arrow_test.exs  cdf_test.exs  config_test.exs  deletion_vectors_test.exs  features_test.exs  io_error_test.exs  maintenance_test.exs  merge_test.exs  metadata_test.exs  native_safety_test.exs  operations_test.exs  query_test.exs  reader_test.exs  telemetry_test.exs  transactions_test.exs  writer_test.exs
test/delta_ex/integration/: s3_test.exs
test/support/: s3_helper.ex
