[package]
name = "delta_ex_native"
version = "0.1.0"
authors = ["naoya"]
edition = "2021"

[lib]
name = "delta_ex_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.0"
deltalake = { version = "0.32.0", features = ["s3", "gcs", "azure", "datafusion"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"
datafusion = "53.1"
arrow = "58.2"
url = "2.5"
chrono = "0.4"
serde_json = "1"
